--- a/templates/yourheat/adminpages/base.html
+++ b/templates/yourheat/adminpages/base.html
@@ -115,6 +115,9 @@
     $("#id_installation_date").datetimepicker({
       format: 'd/m/Y', timepicker: false,
     });
+    $("#id_job_date").datetimepicker({
+      format: 'd/m/Y', timepicker: false,
+    });
   });
 </script>
 
