YH Heat Plans Comms

--- a/templates/yourheat/adminpages/customer_comms_landing_page.html
+++ b/templates/yourheat/adminpages/customer_comms_landing_page.html
@@ -66,7 +66,16 @@
         </div>
         <div class = "col-8">    
             <i>Dear ____, We just wanted to thank you for the opportunity to quote...</i>
-            <p class="critical_ss_fields">&nbsp;&nbsp;[Customer Title] [Customer Last Name] [Customer ID] tbd</p>
+            <p class="critical_ss_fields">&nbsp;&nbsp;[Customer Title] [Customer Last Name] [Customer ID]</p>
+        </div>
+    </div>
+    <div class="row comms-row">
+        <div class = "col-4">                      
+            <a class="btn boilerbtn btn-warning" href="{% url 'GetHeatPlan' customer_id %}">Heat Plan Comms</a>
+        </div>
+        <div class = "col-8">    
+            <i>Dear ____, Thank you for taking the time to view our range of care plans...</i>
+            <p class="critical_ss_fields">&nbsp;&nbsp;[Customer Title] [Customer Last Name] [Customer ID]</p>
         </div>
     </div>
     <div class="row comms-row">
