YH Updated links to choose plan and T&Cs

--- a/templates/pdf/user_yourheatx/customer_comms/Heat Plan Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Heat Plan Comms.html
@@ -195,9 +195,12 @@
 
         .fbold {
             font-weight: 600;    
-        } 
+        }
 
-    
+        .text-orange {
+            color: rgb(251, 126, 51);
+        }
+
 
 
     </style>
@@ -369,7 +372,7 @@
                                             <p class="features">X</p>
                                
                                             <p class="features">X</p>
-                               
+
                             </div>
                         </td>
 
@@ -554,7 +557,8 @@
                 {% if "Confirmed" in customer_plan_type %}
                 If you have any questions, please call us on <a href="tel:01732622990">01732 622990</a> or email via <a href='mailto:service@yourheat.co.uk'>service@yourheat.co.uk</a>
                 {% else %}
-                If you would like to take advantage of this special offer, please give us a call on <a href="tel:01732622990">01732 622990.</a>
+                If you wish to sign up to one of the plans, you can do so online <b><a href="https://yourheat.co.uk/care-plan-pricing/"><span class=text-orange>BY CLICKING HERE</span></a></b>, it takes less than a minute.<br>
+                You can also talk to us here by calling <a href="tel:01732622990">01732 622990.</a>
                 {% endif %}
             </p>
 
@@ -579,8 +583,8 @@
         </div>
 
         <div class="right">
-            <p class="footer_text">Copyright © 2020 Your Heat Ltd | VAT No. 213 6884 04</p>
-            <p class="footer_text"><a href=' https://yourheat.co.uk/terms-and-conditions/'>Installation Terms and
+            <p class="footer_text">Copyright © 2021 Your Heat Ltd | VAT No. 213 6884 04</p>
+            <p class="footer_text"><a href='https://yourheat.co.uk/boiler-heating-care-plans-policy-terms-conditions/'>Heating Care Plan Terms and
                     Conditions</a></p>
         </div>
     </div>
