YH Converted tick and x chars to icons

--- a/templates/pdf/user_yourheatx/customer_comms/Heat Plan Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Heat Plan Comms.html
@@ -353,25 +353,25 @@
                                     
                                             <p class = "features"><span class="bigbold">&nbsp;</span></p>
                                     
-                                            <p class = "features">&#10004;</p>
+                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
                                
-                                            <p class="features">&#10004;</p>
+                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
                                
                                     {% if "Landlord" in customer_plan_type %}
                                
-                                            <p class="features">&#10004;</p>
+                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
                                
                                     {% endif %}
                                
-                                            <p class="features">X</p>
+                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
                                
-                                            <p class="features">X</p>
+                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
                                
-                                            <p class="features">X</p>
+                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
                                
-                                            <p class="features">X</p>
+                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
                                
-                                            <p class="features">X</p>
+                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
 
                             </div>
                         </td>
@@ -420,25 +420,25 @@
                                             <p class = "features"><span class="bigbold">&nbsp;</span></p>
                                  
                                 
-                                            <p class = "features">&#10004;</p>
+                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
                                  
-                                            <p class = "features">&#10004;</p>
+                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
                                 
                                     {% if "Landlord" in customer_plan_type %}
                                  
-                                            <p class = "features">&#10004;</p>
+                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
                                    
                                     {% endif %}
                                   
-                                            <p class = "features">&#10004;</p>
+                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
                                   
-                                            <p class = "features">&#10004;</p>
+                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
                                  
-                                            <p class = "features">&#10004;</p>
+                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
                                     
-                                            <p class = "features">X</p>
+                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
                                      
-                                            <p class = "features">X</p>
+                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
                                       
                             </div>
                         </td>
@@ -487,25 +487,25 @@
                                             <p class = "features fbold"><span class="bigbold">&nbsp;</span></p>
                                     
                                
-                                            <p class="features">&#10004;</p>
+                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
                                     
-                                            <p class="features">&#10004;</p>
+                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
                                    
                                     {% if "Landlord" in customer_plan_type %}
                                   
-                                            <p class="features">&#10004;</p>
+                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
                                       
                                     {% endif %}
                                    
-                                            <p class="features">&#10004;</p>
+                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
                                      
-                                            <p class="features">&#10004;</p>
+                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
                                      
-                                            <p class="features">&#10004;</p>
+                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
                                        
-                                            <p class="features">&#10004;</p>
+                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
                                        
-                                            <p class="features">X</p>
+                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
                                        
                             </div>
                         </td>
