YH Engineer Hub Initial Pages creation

--- a/templates/yourheat/adminpages/base.html
+++ b/templates/yourheat/adminpages/base.html
@@ -118,6 +118,9 @@
     $("#id_job_date").datetimepicker({
       format: 'd/m/Y', timepicker: false,
     });
+    $("#id_unavailable_date").datetimepicker({
+      format: 'd/m/Y', timepicker: false,
+    });
   });
 </script>
 
